--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     font-size: 15px;
     font-family: 'Open Sans', sans-serif;
     color: #444;
-    background-color: #7d7be2;
+    background-color: #f65c65;
     /* background-image: url(back.jpg); */
     background-repeat: no-repeat;
     background-size: cover;
@@ -14,11 +14,6 @@
     margin: 0;
     min-height: 100vh;
     position: relative;
-    /* display: grid;
-    grid:
-    "header header header header" auto
-    "...... lists  active  ......" auto /
-    1fr minmax(100px, 450px) minmax(550px, 600px) 1fr; */
   }
   
   h1{
@@ -27,12 +22,34 @@
     margin-bottom: 40px;
   }
 
-  /* .title{
-     grid-area: header;
-  } */
+  .green {
+    background-color: green;
+    opacity: 0.7;
+    color: white;
+    margin-bottom: 5px;
+    border-radius: 20px;
+  }
+  .green:hover, .yellow:hover, .red:hover {
+    padding: 1px 1px 1px 1px;
+  }
+
+  .yellow {
+    background-color: yellow;
+    opacity: 0.7;
+    color: black;
+    margin-bottom: 5px;
+    border-radius: 20px;
+  }
+
+  .red {
+    background-color: red;
+    opacity: 0.7;
+    color: white;
+    margin-bottom: 5px;
+    border-radius: 20px;
+  }
 
   .all-tasks{
-    /* grid-area: lists; */
     width: 500px;
     max-width: 100%;
     min-height: 100px; 
@@ -48,7 +65,6 @@
   }
 
   .todo-list{
-    /* grid-area: active; */
     width: 500px;
     max-width: 100%;
     min-height: 100px;
@@ -64,7 +80,6 @@
   }
 
   .priority {
-      /* grid-area: active; */
       width: 500px;
       max-width: 100%;
       min-height: 100px;
@@ -229,7 +244,6 @@ li {
 }
 
 [type="checkbox"] {
-  /* opacity: 0; */
   min-width: 8%;
   margin: 15px 0 15px 0;
   position: relative;
